# Visual-Computing

./: .gitignore
Assignment_1/: CMakeLists.txt  README.md
Assignment_1/final_results/: kp_vs_quality.csv  ransac_sweep_outroom_sift.csv
Assignment_1/include/: blend.hpp  features.hpp  homography.hpp  matching.hpp  preprocess.hpp  stitch.hpp  warp.hpp
Assignment_1/results/run_20250926_034718/: params.txt
Assignment_1/results/run_20250926_034934/: params.txt
Assignment_1/results/run_20250926_042158/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_042709/: detect_describe.csv  matching.csv  params.txt  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_063124/: detect_describe.csv  kept_distances.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_074251/: detect_describe.csv  matching.csv  params.txt  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_075423/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_075507/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_075541/: detect_describe.csv  kept_distances.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_075642/: detect_describe.csv  kept_distances.csv  matching.csv  ransac.csv  raw_distances.csv  stitch.csv
Assignment_1/results/run_20250926_081905/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_081947/: detect_describe.csv  matching.csv  ransac.csv  raw_distances.csv  stitch.csv
Assignment_1/results/run_20250926_082019/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_082118/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_082136/: detect_describe.csv  matching.csv  ransac.csv  raw_distances.csv  stitch.csv
Assignment_1/results/run_20250926_082142/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_083404/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_085100/: detect_describe.csv  matching.csv  ransac.csv  raw_distances.csv  stitch.csv
Assignment_1/results/run_20250926_085145/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/results/run_20250926_085219/: detect_describe.csv  matching.csv  ransac.csv  stitch.csv
Assignment_1/scripts/: collect_kp_vs_quality.py  plot_results.py  run_grid.sh  sweep_ransac_thresholds.py
Assignment_1/src/: blend.cpp  features.cpp  homography.cpp  main.cpp  matching.cpp  preprocess.cpp  stitch.cpp  warp.cpp
Assignment_2/: CMakeLists.txt  README.md  imgui.ini
Assignment_2/docs/: filter.csv  resolution.csv  transformation.csv
Assignment_2/include/: Application.hpp  FrameProcessor.hpp  PerformanceTracker.hpp  ShaderProgram.hpp  Types.hpp
Assignment_2/shaders/: comic.frag  edge.frag  pass_through.frag  pixelate.frag  textured_quad.vert
Assignment_2/src/: Application.cpp  FrameProcessor.cpp  main.cpp
(+144 files in other folders)
